Update homepage and build script

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "scripts": {
     "lint": "eslint --ext .js . src",
     "lint:fix": "eslint --fix --ext .js . src",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\"",
-    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=assets/icons/linux/1024x1024.png --prune=true --out=release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\")",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=$(pwd)/src/assets/icons/mac/icon.icns --prune=true --out=release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\")",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=$(pwd)/src/assets/icons/linux/1024x1024.png --prune=true --out=release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\")",
     "package-linux-x64": "npm run package-linux && electron-installer-debian --config config.json"
   },
   "build": {
@@ -32,7 +32,7 @@
   "author": {
     "name": "Le Minh Tri",
     "email": "ansidev@gmail.com",
-    "url": "https://wp-legoiv.rhcloud.com/"
+    "url": "https://ansidev.xyz/"
   },
   "license": "GPL-3.0",
   "devDependencies": {
