--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "unofficial-zalo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "revision": "20170907",
   "description": "Unofficial Zalo App",
   "repository": "SafeStudio/unofficial-zalo",
   "main": "app.js",
   "scripts": {
+    "dist": "electron-builder",
     "lint": "eslint --ext .js . src",
     "lint:fix": "eslint --fix --ext .js . src",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=$(pwd)/src/assets/icons/mac/icon.icns --prune=true --out=release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\")",
-    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")",
-    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=$(pwd)/src/assets/icons/linux/1024x1024.png --prune=true --out=release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\")",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=$(pwd)/release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")",
+    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=$(pwd)/src/assets/icons/linux/64x64.png --prune=true --out=$(pwd)/release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\") --prepackaged $(pwd)/release-builds",
     "package-linux-x64": "npm run package-linux && electron-installer-debian --config config.json"
   },
   "build": {
     "appId": "studio.safe.unofficial-zalo",
+    "productName": "Unofficial Zalo",
+    "directories": {
+      "output": "release-builds"
+    },
     "mac": {
-      "category": "studio.safe.unofficial-zalo"
+      "category": "studio.safe.unofficial-zalo",
+      "icon": "src/assets/icons/mac/icon.icns"
     }
   },
   "engines": {
