Add option to auto start app with system

--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "eslint": "^4.11.0",
+    "eslint": "^4.13.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "dependencies": {
+    "auto-launch": "^5.0.5"
   }
 }
