--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "dist": "electron-builder",
     "lint": "eslint --ext .js . src",
     "lint:fix": "eslint --fix --ext .js . src",
-    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=$(pwd)/release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")",
-    "package-linux": "electron-packager . --overwrite --platform=linux --arch=x64 --icon=$(pwd)/src/assets/icons/linux/64x64.png --prune=true --out=$(pwd)/release-builds --electronVersion=$(electron -v | sed -e \"s/^v//\") --prepackaged $(pwd)/release-builds",
-    "package-linux-x64": "npm run package-linux && electron-installer-debian --config config.json"
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=$(pwd)/release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")"
   },
   "build": {
     "appId": "studio.safe.unofficial-zalo",
@@ -22,6 +20,10 @@
     "mac": {
       "category": "studio.safe.unofficial-zalo",
       "icon": "src/assets/icons/mac/icon.icns"
+    },
+    "linux": {
+      "category": "Network",
+      "target": ["AppImage", "deb", "rpm", "zip", "tar.xz", "tar.gz", "tar.bz2"]
     }
   },
   "engines": {
