--- a/package.json
+++ b/package.json
@@ -23,7 +23,16 @@
     },
     "linux": {
       "category": "Network",
-      "target": ["AppImage", "deb", "rpm", "zip", "tar.xz", "tar.gz", "tar.bz2"]
+      "target": [
+        "snap",
+        "AppImage",
+        "deb",
+        "rpm",
+        "zip",
+        "tar.xz",
+        "tar.gz",
+        "tar.bz2"
+      ]
     }
   },
   "engines": {
@@ -43,6 +52,7 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "electron-builder": "^19.53.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
