--- a/package.json
+++ b/package.json
@@ -23,12 +23,8 @@
     },
     "linux": {
       "category": "Network",
-      "target": ["AppImage", "deb", "rpm", "zip", "tar.xz", "tar.gz", "tar.bz2"]
+      "target": ["snap", "AppImage", "deb", "rpm", "zip", "tar.xz", "tar.gz", "tar.bz2"]
     }
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
   },
   "keywords": [
     "unofficial",
@@ -43,6 +39,7 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "electron-builder": "^19.52.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
