--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "SafeStudio/unofficial-zalo",
   "main": "app.js",
   "scripts": {
-    "dist": "electron-builder",
+    "dist": "./node_modules/.bin/electron-builder",
     "lint": "eslint --ext .js . src",
     "lint:fix": "eslint --fix --ext .js . src",
     "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=$(pwd)/release-builds --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")"
@@ -23,7 +23,16 @@
     },
     "linux": {
       "category": "Network",
-      "target": ["snap", "AppImage", "deb", "rpm", "zip", "tar.xz", "tar.gz", "tar.bz2"]
+      "target": [
+        "snap",
+        "AppImage",
+        "deb",
+        "rpm",
+        "zip",
+        "tar.xz",
+        "tar.gz",
+        "tar.bz2"
+      ]
     }
   },
   "keywords": [
@@ -39,7 +48,9 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "electron": "^1.7.11",
     "electron-builder": "^19.52.1",
+    "eslint": "^4.16.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
