--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,14 @@
 environment:
   nodejs_version: "9.8.0"
 
+platform:
+  - x86
+  - x64
+
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version
+  - ps: Install-Product node $env:nodejs_version $env:platform
   # install modules
   - npm install --save-dev
   - npm run dist
