--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,8 @@ install:
   - ps: Install-Product node $env:nodejs_version $env:platform
   # install modules
   - npm install --save-dev
+
+build_script:
   - npm run dist
 
 version: '{build}'
