--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unofficial-zalo",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "revision": "20171216",
   "description": "Unofficial Zalo App",
   "repository": "SafeStudio/unofficial-zalo",
@@ -45,14 +45,15 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^1.8.8",
-    "electron-builder": "^20.28.2",
-    "eslint": "^4.19.1",
-    "eslint-config-standard": "^11.0.0",
+    "electron": "^3.0.7",
+    "electron-builder": "^20.31.2",
+    "eslint": "^5.8.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "ajv": "^6.5.4"
   },
   "dependencies": {
     "auto-launch": "^5.0.5"
