--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ env:
   - CXX=g++-4.8
 
 node_js:
-  - 9
+  - 11
 
 cache:
+  yarn: true
   directories:
     - node_modules
 
@@ -30,9 +31,10 @@ addons:
       - rpm
       - curl
 
-install:
-  - nvm install 9
-  - npm install --save-dev
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
+  - export PATH="$HOME/.yarn/bin:$PATH"
 
-script:
-  - npm run dist
+install:
+  - yarn install
+  - yarn dist
