--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "unofficial-zalo",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "revision": "20171216",
   "description": "Unofficial Zalo App",
   "repository": "SafeStudio/unofficial-zalo",
   "main": "app.js",
   "scripts": {
     "dist": "./node_modules/.bin/electron-builder",
-    "lint": "eslint --ext .js . src",
-    "lint:fix": "eslint --fix --ext .js . src",
+    "lint": "eslint . --ext .js --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .js --ignore-path .gitignore --fix",
     "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=$(pwd)/src/assets/icons/win/icon.ico --prune=true --out=$(pwd)/dist --version-string.CompanyName=SafeStudio --version-string.FileDescription=CE --version-string.ProductName=\"Unofficial Zalo\" --electronVersion=$(electron -v | sed -e \"s/^v//\")"
   },
   "build": {
-    "appId": "studio.safe.unofficial-zalo",
+    "appId": "tech.safestudio.unofficial-zalo",
     "productName": "Unofficial Zalo",
     "mac": {
-      "category": "studio.safe.unofficial-zalo",
+      "category": "tech.safestudio.unofficial-zalo",
       "icon": "src/assets/icons/mac/icon.icns"
     },
     "linux": {
@@ -45,15 +45,15 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
-    "electron": "^4.0.0",
-    "electron-builder": "^20.38.3",
-    "eslint": "^5.10.0",
+    "electron": "^4.0.4",
+    "electron-builder": "^20.38.5",
+    "eslint": "^5.13.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "ajv": "^6.6.1"
+    "ajv": "^6.8.1"
   },
   "dependencies": {
     "auto-launch": "^5.0.5"
