--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,21 @@ addons:
       - curl
 
 before_install:
+  - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.34.0/install.sh | bash
+  - export NVM_DIR="${XDG_CONFIG_HOME/:-$HOME/.}nvm"
+  - [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+  - nvm use 11
   - curl -o- -L https://yarnpkg.com/install.sh | bash
   - export PATH="$HOME/.yarn/bin:$PATH"
 
 install:
   - yarn install
   - yarn dist
+deploy:
+  provider: releases
+  api_key: $GITHUB_TOKEN
+  file_glob: true
+  file:
+    - "dist/*"
+  on:
+    tags: true
