--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 # Test against the latest version of this Node.js version
 environment:
-  nodejs_version: "11.8.0"
+  nodejs_version: "12.1.0"
   GH_TOKEN:
     secure: idf9Ht7UeO27yGNByujMSDxNNoeWYaxXOyk+znTJbgmybPAIlVnp4gWpGmOs/awj
 
@@ -19,7 +19,7 @@ install:
   - yarn install
 
 build_script:
-  - yarn dist
+  - yarn release:win
 
 version: '{build}'
 
